// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoNJl djnpOX"
>
  <li
    className="sc-fzqNqU emlwUA"
  >
    <span
      className="sc-fzqBZW jVvgPm"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqNqU emlwUA"
  >
    <span
      className="sc-fzqBZW jVvgPm"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqNqU emlwUA"
  >
    <span
      className="sc-fzqBZW jVvgPm"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoNJl djnpOX"
>
  <li
    className="sc-fzqNqU sc-fzoyTs dFBSXJ"
  >
    <span
      className="sc-fzqBZW jVvgPm"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqNqU sc-fzoyTs dFBSXJ"
  >
    <span
      className="sc-fzqBZW jVvgPm"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqNqU sc-fzoyTs dFBSXJ"
  >
    <span
      className="sc-fzqBZW jVvgPm"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
